--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "semver": "7.3.2",
     "style-loader": "1.3.0",
     "styled-components": "^5.2.1",
+    "svg-sprite-loader": "^5.0.0",
+    "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typescript": "^4.0.3",
@@ -101,7 +103,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4"
+    "@types/styled-components": "^5.1.4",
+    "@types/webpack-env": "^1.16.0"
   },
   "jest": {
     "roots": [
