--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pocketbookkeeping",
   "version": "0.1.0",
+  "homepage": "https://zrh0617.gitee.io/pocketbookkeeping-website/",
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -82,7 +83,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "deploy": "sh scripts/deploy.sh"
   },
   "eslintConfig": {
     "extends": [
