--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
     "css-loader": "4.3.0",
+    "dayjs": "^1.9.7",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "echarts": "^5.0.0",
+    "echarts-for-react": "^2.0.16",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
