--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "echarts": "^5.0.0",
-    "echarts-for-react": "^2.0.16",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -109,6 +108,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/echarts": "^4.9.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@types/webpack-env": "^1.16.0"
